# cpp-project-template

./: .clang-tidy  CMakeLists.txt  README.md  foo.cc  foo.h  foo_test.cc  main.cc
cmake-modules/: ProjectHelpers.cmake
